18_reverse_str/grade.txt
Grading at Thu Mar 25 17:27:59 UTC 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:9:16: error: too few arguments to function ‘strchr’
   if (l > 0 && strchr(str)){
                ^
The code did not compile!

Overall Grade: F
